--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -84,7 +84,21 @@
       </tr>
   <tr>
    <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-   <td><b>設定について</b><br><ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示オン/TNTオフ/火の延焼オフ/あとはお好みで設定してください。</ul><br><b>マルチプレイについて</b><br><ul><li>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul><br><b>入力方法</b><br><ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。</ul></td> 
+   <td><b>設定について</b><br><ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示オン/TNTオフ/火の延焼オフ/あとはお好みで設定してください。</ul><td>
+  </tr>
+  <tr>
+   <td></td>
+   <td><b>マルチプレイについて</b><br><ul><li>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。</ul></td>
+  </tr>
+  <tr>
+   <td></td>
+   <td><b>コマンドについて</b><br><ul><li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。</ul></ul></td> 
+ 
+  
+  
+  
+  
+  
   </tr>
        <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
