--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -82,16 +82,16 @@
        <td><b>１　目標提示</b><br><ul><li>１.目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。<li>「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。</ul><li>２.ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
        </td>
       </tr>
-  <tr>
-   <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-   <td><b>設定について</b><br><ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示オン/TNTオフ/火の延焼オフ/あとはお好みで設定してください。</ul><td>
-  </tr>
+      <tr>
+         <td><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
+         <td><b>設定について</b><br><ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示オン/TNTオフ/火の延焼オフ/あとはお好みで設定してください。</ul><td>
+     </tr>
   <tr>
    <td></td>
    <td><b>マルチプレイについて</b><br><ul><li>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。</ul></td>
   </tr>
   <tr>
-   <td></td>
+   <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
    <td><b>コマンドについて</b><br><ul><li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。</ul></ul></td> 
  
   
