--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -84,7 +84,7 @@
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
-         <td><b>設定について</b><br><ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示オン/TNTオフ/火の延焼オフ/あとはお好みで設定してください。</ul><td>
+         <td><b>設定について</b><br><ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」/あとはお好みで設定してください。</ul><td>
      </tr>
   <tr>
    <td></td>
