--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -87,7 +87,7 @@
          <td><b>設定について</b><br><br><ul>ホスト機のPCにワールドを作成します。<ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」/あとはお好みで設定してください。</ul></ul><td>
      </tr>
   <tr>
-   <td></td>
+   <td><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><br><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
    <td><b>マルチプレイについて</b><br><ul><li>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。</ul></td>
   </tr>
   <tr>
