--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -92,7 +92,7 @@
   </tr>
   <tr>
    <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-   <td><b>マルチプレイのコマンドについて</b><br><ul><li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。</ul></ul></td> 
+   <td><b>マルチプレイのコマンドについて</b><br><ul><li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul></ul></td> 
  
   
   
