--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -87,20 +87,14 @@
          <td><b>設定について</b><br><br><ul>ホスト機のPCにワールドを作成します。<ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」/あとはお好みで設定してください。</ul></ul><td>
      </tr>
   <tr>
-   <td><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
-   <td><b>マルチプレイについて</b><br><ul><li>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。</ul></td>
+    <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
+    <td><b>マルチプレイのコマンドについて(ホスト機のPCでの作業）</b><br><ul>同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。ホスト機のPCで設定をします。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul></ul></td> 
   </tr>
   <tr>
-   <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-   <td><b>マルチプレイのコマンドについて</b><br><ul><li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul></ul></td> 
- 
-  
-  
-  
-  
-  
+    <td><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
+    <td><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><br><ul><li>１.ホスト機のPCでワールドを立ち上げたます。<li>２．児童の制作用iPadのアプリを開きます。<li>３.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>４.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></td>
   </tr>
-       <tr>
+      <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
         <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していきました。<li>基本的にペア活動とし，ペアの１人が制作，もう一人が情報収集しながら15分交代で協力して作業を進めていきました。</ul></ul></td>
       </tr>
