--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -50,8 +50,8 @@
          <td>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!</td>
       </tr>
       <tr>
-       <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
-       <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><ul><li>実施事例で使用したPCの参考スペック<ul><li>プロセッサー:intel COREi3<li>メモリ:8GB</ul><li>ホスト機であるPCにワールドを作成し，児童の制作用iPadからそのワールドに入ってマルチプレイで町づくり作業を進めていきます。<li>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。<li>統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</ul></td>
+       <td>使用教材（ホスト機のPC）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
+       <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><ul><li>実施事例で使用したPCの参考スペック<ul><li>OS:Windows10<li>プロセッサー:intel COREi3<li>メモリ:8GB</ul><li>ホスト機であるPCにワールドを作成し，児童の制作用iPadからそのワールドに入ってマルチプレイで町づくり作業を進めていきます。<li>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。<li>統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</ul></td>
       </tr>
       <tr>
          <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
