--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -84,15 +84,15 @@
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
-         <td><b>設定について</b><br><ul>ホスト機のPCにワールドを作成します。<ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」/あとはお好みで設定してください。</ul></ul><td>
+         <td><b>設定について</b><br><ul>ここでホスト機の設定について説明します。ホスト機のPCにワールドを作成します。<ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」/あとはお好みで設定してください。</ul></ul><td>
      </tr>
   <tr>
     <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-    <td><b>マルチプレイのコマンドについて(ホスト機のPCでの作業）</b><br><ul>同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。ホスト機のPCで設定をします。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul></ul></td> 
+    <td><b>マルチプレイのコマンドについて(ホスト機のPCでの作業）</b><br><ul>ホスト機でマルチプレイの設定をします。同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。ホスト機のPCで設定をします。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul></ul></td> 
   </tr>
   <tr>
     <td><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
-    <td><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><br><ul>ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
+    <td><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><br><ul>次に児童の制作用iPadでホスト機のPCがワールドに入る入り方を説明します。ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
   </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
