--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -84,7 +84,7 @@
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
-         <td><b>設定について</b><br><ul>ここでホスト機の設定について説明します。ホスト機のPCにワールドを作成します。<ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」/あとはお好みで設定してください。</ul></ul><td>
+         <td><b>設定について</b><br><ul>ここでホスト機の設定について説明します。ホスト機のPCにワールドを作成します。本事例では商店街を作成するのでワールドは何も存在しない平坦な「フラット」に設定しました。（起伏に富んだ地形を利用した町づくりをする際は「無限」に設定します。）<li>推奨設定<ul><li>ワールド:フラット<li>ゲームモード:クリエイティブ<li>難易度:ピース<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」/あとはお好みで設定してください。</ul></ul><td>
      </tr>
   <tr>
     <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
