--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -51,11 +51,11 @@
       </tr>
       <tr>
        <td>使用教材（ホスト機のPC）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
-       <td><b>Windows10版Minecraft(※Java版と間違えないように!)をインストール(有料）したPC</b><ul><li>実施事例で使用したPCの参考スペック<ul><li>OS:Windows10<li>プロセッサー:intel COREi3<li>メモリ:8GB</ul><li>ホスト機であるPCにワールドを作成し，児童の制作用iPadからそのワールドに入ってマルチプレイで町づくり作業を進めていきます。<li>Windows10版アプリを所有するマイクロソフトアカウントでサインインしてアプリを入手すると，最大10台のWindows10デバイスにインストールできます。<li>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。<li>授業で使う際はMinecraft Education Editionの方が，通常のMincraft(統合版)にはない様々な機能があるので，ベターです。</ul></td>
+       <td><b>Windows10版Minecraft(※Java版と間違えないように!)をインストール(有料）したPC</b><ul><li>実施事例で使用したPCの参考スペック<ul><li>OS:Windows10<li>プロセッサー:intel COREi3<li>メモリ:8GB</ul><li>ホスト機であるPCにワールドを作成し，児童の制作用iPadからそのワールドに入ってマルチプレイで町づくり作業を進めていきます。<li>Windows10版アプリを所有するマイクロソフトアカウントでサインインしてアプリを入手すると，最大10台のWindows10デバイスにインストールできます。<li>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。授業で使う際はMinecraft Education Editionの方が，通常のMincraft(統合版)にはない様々な機能があるので，ベターです。</ul></td>
       </tr>
       <tr>
          <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
-         <td><b>MinecraftをインストールしたiPad</b><br><ul><li>ホスト機であるPC上のワールドに入って，マルチプレイで町づくりを進めていきます。<li>App StoreでMinecraft（有料）をダウンロードします。<li>同一Apple IDでサインインしていれば，１回の購入で複数台にインストールできます。<li>Microsoft Education A3以上を契約している自治体は，iPad版のMinecraft Education Edition(マインクラフト教育版：無料)が使用できます。※iPad版のMinecraft Education Editionのダウンロードは無料ですが，契約していないと使用できません。<li>授業で使う際はMinecraft Education Editionの方が,通常のMincraft(統合版)にはない様々な機能があるので，ベターです。</ul></td>
+         <td><b>MinecraftをインストールしたiPad</b><br><ul><li>ホスト機であるPC上のワールドに入って，マルチプレイで町づくりを進めていきます。<li>App StoreでMinecraft（有料）をダウンロードします。<li>同一Apple IDでサインインしていれば，１回の購入で複数台にインストールできます。<li>Microsoft Education A3以上を契約している自治体は，iPad版のMinecraft Education Edition(マインクラフト教育版：無料)が使用できます。※iPad版のMinecraft Education Editionのダウンロードは無料ですが，契約していないと使用できません。授業で使う際はMinecraft Education Editionの方が,通常のMincraft(統合版)にはない様々な機能があるので，ベターです。</ul></td>
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
