--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -55,7 +55,7 @@
       </tr>
       <tr>
          <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
-         <td><b>MinecraftをインストールしたiPad</b><br><ul><li>ホスト機であるPC上のワールドに入って，マルチプレイで町づくりを進めていきます。<li>App StoreでMinecraft（有料）をダウンロードします。<li>同一Apple IDでサインインしていれば，１回の購入で複数台にインストールできます。<li>Microsoft Education A3以上を契約している自治体は，iPad版のMinecraft Education Edition(マインクラフト教育版：無料)が使用できます。※iPad版のMinecraft Education Editionのダウンロードは無料ですが，契約していないと使用できません。授業で使う際はMinecraft Education Editionの方が,通常のMincraft(統合版)にはない様々な機能があるので，ベターです。</ul></td>
+         <td><b>MinecraftをインストールしたiPad</b><br><ul><li>ホスト機であるPC上のワールドに入って，マルチプレイで町づくりを進めていきます。<li>App StoreでMinecraft（有料）をダウンロードします。<li>同一Apple IDでサインインしていれば，１回の購入で複数台にインストールできます。<li>Microsoft Education A3以上を契約している自治体は，iPad版のMinecraft Education Edition(マインクラフト教育版：無料)が使用できます。授業で使う際はMinecraft Education Editionの方が,通常のMincraft(統合版)にはない様々な機能があるので，ベターです。※iPad版のMinecraft Education Editionのダウンロードは無料ですが，契約していないと使用できません。</ul></td>
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
