--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -79,7 +79,7 @@
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
-       <td><b>１　目標提示</b><br><ul><li>１.目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。<li>ペアを組み，１学期の間は１人が制作をし，もう一人が店舗情報を検索してサポートするという活動を15分交代で実施しました。</ul><li>２.ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
+       <td><b>１　目標提示</b><br><ul><li>１.目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。<li>ペアを組み，１学期の間は１人が制作をし，もう一人が店舗情報を検索してサポートするという活動を15分交代で実施しました。活動が軌道に乗った２学期は１人で制作と情報収集を行いました。</ul><li>２.ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
        </td>
       </tr>
       <tr>
