--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -99,7 +99,7 @@
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td><b>進捗状況（６月）</b><br><ul><li>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul></td>
+         <td><b>進捗状況（６月）</b><br><ul><li>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えました。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul></td>
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
