--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -91,7 +91,7 @@
   </tr>
   <tr>
     <td><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
-    <td><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><br><ul>次に児童の制作用iPadでホスト機のPCがワールドに入る入り方を説明します。ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
+    <td><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><br><ul>次に児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
   </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
