--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -63,7 +63,7 @@
       </tr>
       <tr>
          <td>環境</td>
-       <td><b>制作用端末</b><ul><li>1人～2人にiPad1台<li>機種はiPad Air2(2015)19～21台</ul><br><b>情報収集用iPad</b><ul><li>1人～2人にiPad1台<li>機種はキーボード付きGIGA端末19～21台</ul><br><b>通信環境</b><ul><li>作業用iPad回線としてレンタルモバイルルーター(WiMax L01s)で19～21台を接続</ul></td>
+       <td><b>制作用端末</b><ul><li>1人～2人にiPad1台<li>機種はiPad Air2(2015)19～21台</ul><br><b>情報収集用iPad</b><ul><li>1人～2人にiPad1台<li>機種はキーボード付きGIGA仕様のiPad19～21台</ul><br><b>通信環境</b><ul><li>作業用iPad回線としてレンタルモバイルルーター(WiMax L01s)で19～21台を接続</ul></td>
       </tr>
       <tr>
          <td>教科・領域</td>
@@ -95,7 +95,7 @@
   </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
-        <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>ペアを組み，１学期の間は１人が自分の担当店舗を制作し，もう１人が店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，１人で制作と情報収集を行いました。</ul></ul></td>
+        <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>ペアを組み，１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，と情報収集を行いました。</ul></ul></td>
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
