--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -43,7 +43,7 @@
       </tr>
       <tr>
          <td>学年</td>
-       <td><b>小学校高学年～高校生位</b>まで可能です。</td>
+       <td><b>小学校高学年</b>（高校生位まで展開が可能)</td>
       </tr>
       <tr>
          <td>目標</td>
