--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -28,9 +28,11 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>マインクラフトで情報活用能力を育成しよう！</h1>
-   
+   <h2>「地域の祭りと商店街をデジタルで表現しよう」</h2>
      <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt="マイクラ完成図路上" width="90%"></div>
+   <p>完成した商店街の上空からの様子</p>
    <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei2.jpg" alt="マイクラ完成図路上" width="90%"></div>
+    <p>完成した商店街の地上からの様子</p>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
