--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -27,7 +27,7 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>マインクラフトで情報活用能力を育成しよう！</h1>
+   <h1>マインクラフトを活用した授業で「評価・改善する『情報活用能力』」を育成しよう！</h1>
    <h2>「地域の祭りと商店街をデジタルで表現しよう」</h2>
      <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt="マイクラ完成図路上" width="90%"></div>
    <p>完成した商店街の上空からの様子</p>
