--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -80,43 +80,43 @@
          <td><b>活動の概要</b></td>
       </tr>
       <tr>
-       <td><h4>パフォーマンス評価に使用したルーブリック</h4><br><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
+       <td>パフォーマンス評価に使用したルーブリック<br><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
        <td><b>１　目標提示</b><br><ul><li>１.目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>２.ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
       </tr>
       <tr>
-         <td><h4>ゲーム設定画面</h4><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
+         <td>ゲーム設定画面<br><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
          <td><b>設定について</b><br><ul>ここでホスト機の設定について説明します。ホスト機のPCにワールドを作成します。<li>推奨設定<ul><li>ワールド:フラット<br>本事例では商店街を作成するのでワールドは何も存在しない平坦な「フラット」に設定しました。（起伏に富んだ地形を利用した町づくりをする際は「無限」に設定）<li>ゲームモード:クリエイティブ<br>建築作業をする場合，空中に浮いて作業ができるクリエイティブにします。<li>難易度:ピース<br>授業に関係のない要素を極力排除するためにはピースが最適です。<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」<br>フラットの世界は目印がありません。迷ってしまう児童が発生することがあります。その場合，座標を教えて戻ってくるよう伝えましょう。せっかく作った町が，一瞬で台無しになってしまわないよう，火の延焼やTNT火薬の爆発は必ずオフにしましょう。<li>その他は指導者のお好みで設定してください。</ul></ul><td>
      </tr>
   <tr>
-    <td><h4>ホスト機でのマルチプレイ（25人)設定コマンド入力画面</h4><br><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
+    <td>ホスト機でのマルチプレイ（25人)設定コマンド入力画面<br><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
     <td><b>マルチプレイのコマンドについて(ホスト機のPCでの作業）</b><br><ul>ホスト機でマルチプレイの設定をします。同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。ホスト機のPCで設定をします。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul></ul></td> 
   </tr>
   <tr>
-    <td><h4>児童の制作用iPadでのマルチプレイ接続手順</h4><br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
+    <td>児童の制作用iPadでのマルチプレイ接続手順<br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
     <td><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><br><ul>次に児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
   </tr>
       <tr>
-       <td><h4>制作と情報収集の様子</h4><br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
+       <td>制作と情報収集の様子<br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
         <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>ペアを組み，１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，基本的に1人２台（制作用と情報収集用）端末でペアで協力しながら制作活動を行いました。</ul></ul></td>
       </tr>
       <tr>
-         <td><h4>教師サイドで事前に準備した商店街の区画</h4><br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br>６月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
+         <td>教師サイドで事前に準備した商店街の区画<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br>６月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
          <td><b>進捗状況（６月）</b><br><ul><li>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えました。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul></td>
       </tr>
       <tr>
-       <td><h4>制作途中の店舗の様子</h4><br><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br>７月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
+       <td>制作途中の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br>７月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
        <td><b>進捗状況（７月）</b><br><ul><li>作業が進んでいる児童が担当している店舗は，完成に近づいているのが分かります。</ul></td>  
       </tr> 
       <tr>
-          <td><h4>11月上旬の進捗状況（上空から)</h4><br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
+          <td>11月上旬の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
           <td><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><br><ul><li>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</ul></td>
       </tr> 
       <tr>
-       <td><h4>SD法によるプロフィール作成のためのアンケート項目</h4><br><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="イメージプロフィール " width="100%"></td>
+       <td>SD法によるプロフィール作成のためのアンケート項目<br><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="イメージプロフィール " width="100%"></td>
           <td><b>評価・改善のための振り返り（SD法を活用）</td>
       </tr>
       <tr>
-          <td><h4>11月中旬，商店街完成後の店舗の様子</h4><br><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br>11月中旬，商店街完成を飾りつけた後の夜の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町 " width="100%"></td>
+          <td>11月中旬，商店街完成後の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br>11月中旬，商店街完成を飾りつけた後の夜の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町 " width="100%"></td>
           <td><b>４.完成した商店街で祭りを表現（11月中旬）</b><br><ul><li>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<li>実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。</ul></td>
       </tr>
    </table>  
