--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -89,7 +89,7 @@
      </tr>
   <tr>
     <td>ホスト機でのマルチプレイ（25人)設定コマンド入力画面<br><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-    <td><b>マルチプレイのコマンドについて(ホスト機のPCでの作業）</b><br><ul>ホスト機でマルチプレイの設定をします。同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。ホスト機のPCで設定をします。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul></ul></td> 
+    <td><b>マルチプレイのコマンドについて(ホスト機のPCでの作業）</b><br><ul>ホスト機でマルチプレイの設定をします。同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。ホスト機のPCで設定をします。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul><li><b>マルチプレイの通信環境について</b><ul>本事例では，学校の通信環境が時間帯によって不安定だったため，マインクラフトによる制作作業用に別途モバイルルーターでWifi環境を準備しました。</ul></ul></td> 
   </tr>
   <tr>
     <td>児童の制作用iPadでのマルチプレイ接続手順<br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
