--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -95,13 +95,17 @@
     <td>児童の制作用iPadでのマルチプレイ接続手順<br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
     <td><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><br><ul>次に児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
   </tr>
+  <tr>
+      <td>教師サイドで事前に準備した商店街の区画<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"></td>
+      <td>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えました。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</td>
+  </tr>
       <tr>
        <td>制作と情報収集の様子<br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
         <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>ペアを組み，１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，基本的に1人２台（制作用と情報収集用）端末でペアで協力しながら制作活動を行いました。</ul></ul></td>
       </tr>
       <tr>
-         <td>教師サイドで事前に準備した商店街の区画<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br>６月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td><b>進捗状況（６月）</b><br><ul><li>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えました。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul></td>
+         <td>６月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
+         <td><b>進捗状況（６月）</b></td>
       </tr>
       <tr>
        <td>制作途中の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br>７月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
@@ -109,8 +113,12 @@
       </tr> 
       <tr>
           <td>11月上旬の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
-          <td><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><br><ul><li>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</ul></td>
+          <td><b>進捗状況（６月）</b></td>
       </tr> 
+      <tr>
+       <td></td>
+       <td><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><br><ul><li>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</ul></td>
+      </tr>
       <tr>
        <td>SD法によるプロフィール作成のためのアンケート項目<br><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="イメージプロフィール " width="100%"></td>
           <td><b>評価・改善のための振り返り（SD法を活用）</td>
