--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -80,6 +80,10 @@
          <td><b>活動の概要</b></td>
       </tr>
       <tr>
+           <td>教師サイドで事前に準備した商店街の区画<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"></td>
+           <td><b>ワールドの事前準備について（ホスト機のPCでの作業）</b><br><ul>本事例では，制作する店舗のスケール感を統一する手立てとして，商店街の区画は教師サイドで準備しました。児童には町のマップと担当の店舗を伝えました。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul></td>
+      </tr>
+      <tr>
        <td>パフォーマンス評価に使用したルーブリック<br><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
        <td><b>１　目標提示</b><br>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!<br><ul><li>１.目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>２.ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
       </tr>
@@ -95,10 +99,7 @@
     <td>児童の制作用iPadでのマルチプレイ接続手順<br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
     <td><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><br><ul>次に児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
   </tr>
-  <tr>
-      <td>教師サイドで事前に準備した商店街の区画<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"></td>
-      <td>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えました。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</td>
-  </tr>
+  
       <tr>
        <td>制作と情報収集の様子<br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
         <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>ペアを組み，１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，基本的に1人２台（制作用と情報収集用）端末でペアで協力しながら制作活動を行いました。</ul></ul></td>
