--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -81,9 +81,9 @@
       </tr>
       <tr>
            <td>教師サイドで事前に準備した商店街の区画<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"></td>
-           <td><b>ワールドの事前準備について（ホスト機のPCでの作業）</b><br><ul>本事例では，制作する店舗のスケール感を統一する手立てとして，商店街の区画は教師サイドで準備しました。児童には町のマップと担当の店舗を伝えました。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul></td>
+           <td><b>ワールドの事前準備について（ホスト機のPCでの作業）</b><br><ul>まずは活動に入る前の事前準備について説明します。本事例は，マインクラフトの経験率が約６割の小学校高学年児童を対象としました。<li>商店街の区画の準備<ul>制作する店舗のスケール感の把握・商店街エリアの把握のために，商店街の区画は教師サイドで準備しました。<li>児童には町のマップと担当の店舗を伝えました。<li>店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul><li>店舗モデルの準備<ul><li>教師サイドで商店街の入り口にある1店舗を制作し，店舗制作のベンチマークとしました。</ul></td>
       </tr>
-      <tr>
+     　<tr>
        <td>パフォーマンス評価に使用したルーブリック<br><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
        <td><b>１　目標提示</b><br><ul>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!<br><li>１.目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>２.ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
       </tr>
