--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -61,7 +61,7 @@
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
-         <td><b>iPad(キーボード付きGIGAスクール端末）</b><br><ul><li>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</ul></td>
+         <td><b>iPad(キーボード付きGIGAスクール端末）</b><br><ul><li>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクリーンショットやWebカード等で保存していきました。</ul></td>
       </tr>
       <tr>
          <td>環境</td>
