--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -80,7 +80,7 @@
          <td><b>活動の概要</b></td>
       </tr>
       <tr>
-           <td>教師サイドで事前に準備した商店街の区画<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"></td>
+           <td>教師サイドで事前に準備した商店街の区画<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="50%"><br>教師サイドで事前に準備した店舗<br><img src="https://tkby.github.io/micra.github.io/shisaku.jpg" alt="試作店舗" width="50%"></td>
            <td><b>ワールドの事前準備について（ホスト機のPCでの作業）</b><br><ul>まずは活動に入る前の事前準備について説明します。本事例は，マインクラフトの経験率が約６割の小学校高学年児童を対象としました。<li>商店街の区画の準備<ul>制作する店舗のスケール感の把握・商店街エリアの把握のために，商店街の区画は教師サイドで準備しました。<li>児童には町のマップと担当の店舗を伝えました。<li>店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul><li>店舗モデルの準備<ul><li>教師サイドで商店街の入り口にある1店舗を制作し，店舗制作のベンチマークとしました。</ul></td>
       </tr>
      　<tr>
