--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -89,7 +89,7 @@
       </tr>
       <tr>
          <td>ゲーム設定画面<br><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
-         <td><b>設定について</b><br><ul>ここでホスト機の設定について説明します。ホスト機のPCにワールドを作成します。<li>推奨設定<ul><li>ワールド:フラット<br>本事例では商店街を作成するのでワールドは何も存在しない平坦な「フラット」に設定しました。（起伏に富んだ地形を利用した町づくりをする際は「無限」に設定）<li>ゲームモード:クリエイティブ<br>建築作業をする場合，空中に浮いて作業ができるクリエイティブにします。<li>難易度:ピース<br>授業に関係のない要素を極力排除するためにはピースが最適です。<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」<br>フラットの世界は目印がありません。迷ってしまう児童が発生することがあります。その場合，座標を教えて戻ってくるよう伝えましょう。せっかく作った町が，一瞬で台無しになってしまわないよう，火の延焼やTNT火薬の爆発は必ずオフにしましょう。<li>その他は指導者のお好みで設定してください。</ul></ul><td>
+         <td>ではここで，毎時間の活動時のホスト機のPCの設定を説明します。<br><b>設定について</b><br><ul>ホスト機のPCにワールドを作成します。<li>推奨設定<ul><li>ワールド:フラット<br>本事例では商店街を作成するのでワールドは何も存在しない平坦な「フラット」に設定しました。（起伏に富んだ地形を利用した町づくりをする際は「無限」に設定）<li>ゲームモード:クリエイティブ<br>建築作業をする場合，空中に浮いて作業ができるクリエイティブにします。<li>難易度:ピース<br>授業に関係のない要素を極力排除するためにはピースが最適です。<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」<br>フラットの世界は目印がありません。迷ってしまう児童が発生することがあります。その場合，座標を教えて戻ってくるよう伝えましょう。せっかく作った町が，一瞬で台無しになってしまわないよう，火の延焼やTNT火薬の爆発は必ずオフにしましょう。<li>その他は指導者のお好みで設定してください。</ul></ul><td>
      </tr>
   <tr>
     <td>ホスト機でのマルチプレイ（25人)設定コマンド入力画面<br><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
