--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -118,7 +118,7 @@
       </tr> 
       <tr>
        <td>SD法によるプロフィール作成のためのアンケート項目<br><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="イメージプロフィール " width="100%"></td>
-       <td><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><br><ul><li>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</ul></td>
+       <td><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><br><ul>本活動のように，マインクラフトで実際の店舗をもとにしてデフォルメした制作物を客観的に評価するにはどうすればよいでしょうか？<li>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</ul></td>
       </tr>
       <tr>
           <td></td>
