--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -81,7 +81,7 @@
       </tr>
        <tr>
          <td>ゲーム設定画面<br><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
-         <td>実際の活動について，機材の設定や資料の説明を挟みながら，１～４の項目に分けて時系列で説明していきます。まず，ホスト機のPCの設定を説明します。<br><b>設定について</b><br><ul>ホスト機のPCにワールドを作成します。<li>推奨設定<ul><li>ワールド:フラット<br>本事例では商店街を作成するのでワールドは何も存在しない平坦な「フラット」に設定しました。（起伏に富んだ地形を利用した町づくりをする際は「無限」に設定）<li>ゲームモード:クリエイティブ<br>建築作業をする場合，空中に浮いて作業ができるクリエイティブにします。<li>難易度:ピース<br>授業に関係のない要素を極力排除するためにはピースが最適です。<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」<br>フラットの世界は目印がありません。迷ってしまう児童が発生することがあります。その場合，座標を教えて戻ってくるよう伝えましょう。せっかく作った町が，一瞬で台無しになってしまわないよう，火の延焼やTNT火薬の爆発は必ずオフにしましょう。<li>その他は指導者のお好みで設定してください。</ul></ul><td>
+         <td>実際の活動について，機材の設定や資料の説明を挟みながら，１～４の項目に分けて時系列で説明していきます。まず，ホスト機のPCの設定を説明します。<br><b>設定について</b><br><ul>ホスト機のPCにワールドを作成します。<li>推奨設定<ul><li>ワールド:フラット<br>本事例では商店街を作成するのでワールドは何も存在しない平坦な「フラット」に設定しました。（起伏に富んだ地形を利用した町づくりをする際は「無限」に設定）<li>ゲームモード:クリエイティブ<br>建築作業をする場合，空中に浮いて作業ができるクリエイティブにします。<li>難易度:ピース<br>授業に関係のない要素を極力排除するためにはピースが最適です。<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」<br>フラットの世界は目印がありません。迷ってしまう児童が発生することがあります。その場合，座標を教えて戻ってくるよう伝えましょう。せっかく作った町が，一瞬で台無しになってしまわないよう，火の延焼やTNT火薬の爆発は必ずオフにしましょう。<li>その他は指導者のお好みで設定してください。</ul></ul></td>
      </tr>
       <tr>
            <td>教師サイドで事前に準備した商店街の区画と店舗<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="52%"><img src="https://tkby.github.io/micra.github.io/shisakuhin.jpg" alt="試作店舗" width="48%"></td>
