--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -85,7 +85,7 @@
      </tr>
       <tr>
            <td>教師サイドで事前に準備した商店街の区画と店舗<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="52%"><img src="https://tkby.github.io/micra.github.io/shisakuhin.jpg" alt="試作店舗" width="48%"></td>
-           <td><b>ワールドの事前準備について（ホスト機のPCでの作業）</b><br><ul>次に，活動に入る前の事前準備について説明します。本事例は，マインクラフトの経験率が約６割の小学校高学年児童を対象としました。<li>商店街の区画の準備<ul><li>制作する店舗のスケール感の把握・商店街エリアの把握のために，商店街の区画は教師サイドで準備しました。<li>児童には町のマップと担当の店舗を伝えました。<li>店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul><li>店舗モデルの準備<ul><li>教師サイドで商店街の入り口にある1店舗を制作し，店舗制作のベンチマークとしました。</ul></td>
+           <td>次に，活動に入る前の事前準備について説明します。本事例は，マインクラフトの経験率が約６割の小学校高学年児童を対象としました。<br><b>ワールドの事前準備について（ホスト機のPCでの作業）</b><ul><li>商店街の区画の準備<ul><li>制作する店舗のスケール感の把握・商店街エリアの把握のために，商店街の区画は教師サイドで準備しました。<li>児童には町のマップと担当の店舗を伝えました。<li>店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul><li>店舗モデルの準備<ul><li>教師サイドで商店街の入り口にある1店舗を制作し，店舗制作のベンチマークとしました。</ul></td>
       </tr>
      　<tr>
        <td>パフォーマンス評価に使用したルーブリック<br><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
