--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -97,7 +97,7 @@
   </tr>
   <tr>
     <td>児童の制作用iPadでのマルチプレイ接続手順<br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
-    <td><ul>次に児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<br><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
+    <td>次に児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。ホスト機のPCがワールドを立ち上げたのを確認して次の1～３の作業をします。<ul><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><li>接続手順<ul><li>１.児童の制作用iPadのアプリを開きます。<li>２.左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>３.右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
   </tr>
   
       <tr>
