--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -102,7 +102,7 @@
   
       <tr>
        <td>制作と情報収集の様子<br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
-        <td>児童の制作用iPadが，全台ホスト機のPCで作成したワールドに入ることが出来ましたか？次は，制作活動を説明いたします。<b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>ペアを組み，１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，基本的に1人２台（制作用と情報収集用）端末でペアで協力しながら制作活動を行いました。</ul></ul></td>
+        <td>児童の制作用iPadが，全台ホスト機のPCで作成したワールドに入ることが出来ましたか？次は，制作活動を説明いたします。<br><b>２ 制作活動</b><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>ペアを組み，１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，基本的に1人２台（制作用と情報収集用）端末でペアで協力しながら制作活動を行いました。</ul></ul></td>
       </tr>
       <tr>
          <td>６月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
