--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -89,7 +89,7 @@
       </tr>
      　<tr>
        <td>パフォーマンス評価に使用したルーブリック<br><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
-       <td>活動の説明に移ります。<br><b>１　目標提示</b><br><ul>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!<br><li>１.目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>２.ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
+       <td>活動の説明に移ります。<br><b>１　目標提示</b><br><ul>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!<br><li>①目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>②ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
       </tr>
    <tr>
     <td>ホスト機でのマルチプレイ（25人)設定コマンド入力画面<br><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
