--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -126,7 +126,7 @@
       </tr>
       <tr>
           <td>11月中旬，商店街完成後の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br>11月中旬，商店街完成を飾りつけた後の夜の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町 " width="100%"></td>
-          <td><b>４.完成した商店街で祭りを表現（11月中旬）</b><br><ul><li>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<li>実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。<li>活動終了後の児童のワークシートの記述例を紹介します。<ul><li>私は，この活動をして，○○市（特に△△大路）について興味がわきました。今までマインクラフトをゲームだと思っていたけど，建物を建てるうち，〇〇市全体に興味を持つことができるんだと考え方が変わりました。私の作業が進んでいなかったとき，〇〇君と□□君が，率先して手伝いに来てくれて，話や作業も盛り上がったし，何よりありがたかったです。こうやって友達のやさしさが見える活動はよいなと思いました。楽しい授業の中で「大人と子供は感じ方がちがう」と学んだので，これから〇〇市以外の行事でも，このことが活かせたらいいなと思います。楽しさもあり，○○市のことを学べるこの授業を受けて，本当に良かったです。</ul></td>
+          <td><b>４.完成した商店街で祭りを表現（11月中旬）</b><br><ul><li>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<li>実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。<li>活動終了後の児童のワークシートの記述例を紹介します。<ul><li>私は，この活動をして，○○市（特に△△大路）について興味がわきました。今までマインクラフトをゲームだと思っていたけど，建物を建てるうち，〇〇市全体に興味を持つことができるんだと考え方が変わりました。私の作業が進んでいなかったとき，〇〇君と□□君が，率先して手伝いに来てくれて，話や作業も盛り上がったし，何よりありがたかったです。こうやって友達のやさしさが見える活動はよいなと思いました。楽しい授業の中で「大人と子供は感じ方がちがう」と学んだので，これから〇〇市以外の行事でも，このことが活かせたらいいなと思います。楽しさもあり，○○市のことを学べるこの授業を受けて，本当に良かったです。<li>５月から11月の間，マインクラフトの学習をして〇〇市の△△祭りの良さが分かった。工夫したところは，友達のアドバイスを聞いて，ピストンを使って服をショーケースに入れたりしたことです。できるようになったことは，他の人とコミュニケーションがとれるようになりました。今までは他の人に，話しかけることがあまりできなかったからです。友達とのやり取りはできたと思います。友達にアドバイスしたりアドバイスされたりしたからです。 </ul></td>
       </tr>
    </table>  
         
