--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -106,7 +106,7 @@
       </tr>
       <tr>
          <td>６月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td><b>進捗状況（６月）</b><ul>【うまくできたところ（児童の記述より）】<li>自分がどこをするか確認できた。<li>グーグルアースで場所を見つけられた。<li>お店の特色を見つけるところが上手くできた。<li>旗の使い方（内そう）<li>ドアまわりのかざり<li>店のふんいきを工夫した。<li>窓の部分を再げんできた。<li>階だんを逆向きに置くところができた。<li>ブロックの色を変えたり細かいものを少し置いたりして再現できた。<li>階だんで屋根を表現することが上手くできた。<li>屋根の板を表現できた。<li>〇〇市の和風感が出せた。<li>〇〇市の町並みを表げんできた。<li>げんかんを上手く作れた。<li>ガラスとかを使い分けたところ<li>店の名前をかけた<li>外側がうまく建ちくできた。<li>土台はほとんどできた。<li>店の色に合わせて建ちくできた。<li>マネキンを防具たてで作った。<li></ul></td>
+         <td><b>進捗状況（６月）</b><br>【うまくできたところ（児童の記述より）】<ul><li>自分がどこをするか確認できた。<li>グーグルアースで場所を見つけられた。<li>お店の特色を見つけるところが上手くできた。<li>旗の使い方（内そう）<li>ドアまわりのかざり<li>店のふんいきを工夫した。<li>窓の部分を再げんできた。<li>階だんを逆向きに置くところができた。<li>ブロックの色を変えたり細かいものを少し置いたりして再現できた。<li>階だんで屋根を表現することが上手くできた。<li>屋根の板を表現できた。<li>〇〇市の和風感が出せた。<li>〇〇市の町並みを表げんできた。<li>げんかんを上手く作れた。<li>ガラスとかを使い分けたところ<li>店の名前をかけた<li>外側がうまく建ちくできた。<li>土台はほとんどできた。<li>店の色に合わせて建ちくできた。<li>マネキンを防具たてで作った。<li></ul></td>
       </tr>
       <tr>
        <td>制作途中の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br>７月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
