--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -110,7 +110,7 @@
       </tr>
       <tr>
        <td>制作途中の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br>７月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
-       <td><b>進捗状況（７月）</b><br><ul><li>作業が進んでいる児童が担当している店舗は，完成に近づいているのが分かります。</ul></td>  
+       <td><b>６月末～７月中旬までのワークシートより</b><br><ul><li>作業が進んでいる児童が担当している店舗は，完成に近づいているのが分かります。</ul></td>  
       </tr> 
       <tr>
           <td>11月上旬の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
