--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -45,7 +45,7 @@
       </tr>
       <tr>
          <td>学年</td>
-       <td><b>小学校高学年</b>（高校生位まで展開が可能)※本事例は，マインクラフトの経験率が約６割の小学校高学年児童（19名～21名）を対象として実施しました。</td>
+       <td><b>小学校高学年</b>（高校生位まで展開が可能)※本事例は，マインクラフトの経験率が約６割の小学校高学年児童（19名＋21名）を対象として実施しました。</td>
       </tr>
       <tr>
          <td>目標</td>
