--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -106,7 +106,7 @@
       </tr>
       <tr>
          <td>６月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td><b>６月末までのワークシートより</b><br>【うまくできたところ】<ul><li>自分がどこをするか確認できた。<li>グーグルアースで場所を見つけられた。<li>お店の特色を見つけるところが上手くできた。<li>外側がうまく建ちくできた。<li>土台はほとんどできた。<li>店の色に合わせて建ちくできた。<li>マネキンを防具たてで作った。</ul><br>【もっとよくしたいところ】<ul><li>作るのがおそい方だと思うので正確にきっちりとやりたい。<li>店の細かいところも表現すること。<li>立体感がある感じにしたい。<li>かべをもっと工夫したい。<li>もう少し昔ながらの町をイメージして伝統的で本物そっくりにしたい。</ul><br>【友達や自分か作ったものを見て気づいたこと】<ul><li>自分の思い通りにいかない。<li>思ったより作るのが難しい。</td>
+         <td>制作活動に入ると，児童はペアで協力しながら店舗の完成に向けて意欲的に取り組む姿が多く見られました。１学期の授業は，店舗制作の作業がメインでした。<b>６月末までのワークシートより</b><br>【うまくできたところ】<ul><li>自分がどこをするか確認できた。<li>グーグルアースで場所を見つけられた。<li>お店の特色を見つけるところが上手くできた。<li>外側がうまく建ちくできた。<li>土台はほとんどできた。<li>店の色に合わせて建ちくできた。<li>マネキンを防具たてで作った。</ul><br>【もっとよくしたいところ】<ul><li>作るのがおそい方だと思うので正確にきっちりとやりたい。<li>店の細かいところも表現すること。<li>立体感がある感じにしたい。<li>かべをもっと工夫したい。<li>もう少し昔ながらの町をイメージして伝統的で本物そっくりにしたい。</ul><br>【友達や自分か作ったものを見て気づいたこと】<ul><li>自分の思い通りにいかない。<li>思ったより作るのが難しい。</td>
       </tr>
       <tr>
        <td>制作途中の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br>７月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
