--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -110,7 +110,7 @@
       </tr>
       <tr>
        <td>制作途中の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br>７月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
-       <td>６月末からは，操作にもなれ，目標に向かってペアで協力しながら意欲的に取り組む姿が多く見られました。１学期の授業は，店舗制作の作業がメインでした。<br><b>６月末～７月中旬までのワークシートより</b><br>【うまくできたところ】<ul><li><整理力・比較力・分析力に関すること><ul><li>お店の（入口を/建物と似たように/色に合わせてブロックを/ガラスの部分とドアを/ドア周りのかざりを/同じような色で壁を/周囲を/屋根を/屋根の下の板を/玄関を/柵を/床を/前を/支柱を)上手く作ることができた。</ul></ul></td>
+       <td>６月末からは，操作にもなれ，目標に向かってペアで協力しながら意欲的に取り組む姿が多く見られました。１学期の授業は，店舗制作の作業がメインでした。<br><b>６月末～７月中旬までのワークシートより</b><br>【うまくできたところ】<ul><li><整理力・比較力・分析力に関すること><ul><li>お店の（入口を/ガラスの部分とドアを/ドア周りのかざりを/周囲を/屋根を/屋根の下の板を/玄関を/柵を/床を/前を/支柱を)上手く作ることができた。<li>お店を建物と似たように表現できた。<li>お店の色に合わせてブロックを置くことができた。<li>お店と同じような色で壁を作れた。</ul></ul></td>
       </tr> 
       <tr>
           <td>11月上旬の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
