--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -101,7 +101,7 @@
   </tr>
   
       <tr>
-       <td>制作と情報収集の様子<br><img src="https://tkby.github.io/micra.github.io/monitor1.jpg" alt="モニター画面" width="100%"><br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"><br><img src="https://tkby.github.io/micra.github.io/setsuzoku.jpg" alt="接続確認" width="100%"></td>
+       <td>制作と情報収集の様子<br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"><br><img src="https://tkby.github.io/micra.github.io/setsuzoku.jpg" alt="接続確認" width="100%"></td>
         <td>ホスト機のPCで作成したワールドに，全台入ることが出来ましたか？次は，制作活動を説明いたします。<br><b>２ 制作活動</b><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>１番はじめの制作活動の時間にペアを組みます。Minecraftの操作や情報収集の仕方等，ペアで学び合いながら活動を進めていきます。<li>１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，基本的に1人２台（制作用と情報収集用）端末でペアで協力しながら制作活動を行いました。<li>１学期の間は，店舗制作に重きを置きました。児童全員の担当する店舗が完成の目途がたった11月上旬から，３で説明する「評価・改善の視点」を持たせるための振り返り活動を行いました。</ul></ul></td>
       </tr>
       <tr>
