--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -110,7 +110,7 @@
       </tr>
       <tr>
        <td>制作途中の店舗の様子<br><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br>７月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
-       <td>６月末からは，操作にもなれ，目標に向かってペアで協力しながら意欲的に取り組む姿が多く見られました。１学期の授業は，店舗制作の作業がメインでした。<br><b>６月末～７月中旬までのワークシートより</b><br>【うまくできたところ】<ul><li><整理力・比較力・分析力に関すること><ul><li>お店の（入口を/ガラスの部分とドアを/ドア周りのかざりを/壁を/周囲を/玄関を/柵を/床を/前を/支柱を屋根を/屋根の下の板を/)上手く作ることができた。<li>お店を建物と似たように表現できた。<li>お店の色に合わせてブロックを置くことができた。<li>お店と同じような色で壁を作れた。<li> (鉄格子をガラスに貼る/防具立てに防具をつける/ハーフブロックを使って細かく表現する/カーテンを旗で再現する/瓦を黒ブロックで作る/階段を逆向きに置く/階段で屋根を上手く表現する/店の名前を書く)ことができた。</ul></ul></td>
+       <td>６月末からは，操作にもなれ，目標に向かってペアで協力しながら意欲的に取り組む姿が多く見られました。１学期の授業は，店舗制作の作業がメインでした。<br><b>６月末～７月中旬までのワークシートより</b><br>【うまくできたところ】<ul><li><整理力・比較力・分析力に関すること><ul><li>お店の（入口を/ガラスの部分とドアを/ドア周りのかざりを/壁を/周囲を/玄関を/柵を/床を/前を/支柱を屋根を/屋根の下の板を/)上手く作ることができた。<li>お店を建物と似たように表現できた。<li>お店の色に合わせてブロックを置くことができた。<li>お店と同じような色で壁を作れた。<li> (鉄格子をガラスに貼る/防具立てに防具をつける/ハーフブロックを使って細かく表現する/カーテンを旗で再現する/瓦を黒ブロックで作る/階段を逆向きに置く/階段で屋根を上手く表現する/店の名前を書く/マネキンを置く/人の絵を学額縁で表現する/形をうまく表現する/わからないことを理解する/店の雰囲気を工夫する/ブロックンの色を変えたり細かいものを少し置いたりして再現する/〇〇市風の和風感を出す/〇〇市の町並みを表現する/草をつける)ことができた。<表現力・伝達力に関すること><ul><li><li>トラップドアを使うと鉄格子の変わりを表現できると分かった。</ul></ul></td>
       </tr> 
       <tr>
           <td>11月上旬の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
