--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -117,7 +117,7 @@
           <td><b>進捗状況（11月）</b></td>
       </tr> 
       <tr>
-       <td>SD法によるプロフィール作成のためのアンケート項目<br><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg/" alt="イメージプロフィール " width="100%"></td>
+       <td>SD法によるプロフィール作成のためのアンケート項目<br><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="イメージプロフィール " width="100%"></td>
        <td>本活動のように，マインクラフトで実際の店舗をもとにしてデフォルメした制作物を客観的に評価するのは，なかなか難しい側面があります。その解決法の１つとしてSD法によるプロフィール作成による手法を紹介いたします。<br><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><ul><li>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</ul></td>
       </tr>
       <tr>
